# xolky

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: test_refactor.py  test_small.py
examples/test_nd6k/: nd6k.py
xolky/: __init__.py  _cast.cu  _cast.cuh  _cast_kernels.cu  _xolky.cpp  wrapper.py
